--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,11 @@
   "GoogleReCaptcha": {
     "ClientKey": "6LfgCoUUAAAAADuKI2yyhj0kxkptt7c1QyLXpIHy",
     "SecretKey": "6LfgCoUUAAAAANav39QX_qRbIZHt53tuUdGvK6F3"
+  },
+  "AppSettings": {
+    "AppUrl": "https://localhost:44334/Users/ResetPassword",
+    "CaptchaVerificationUrl": "https://www.google.com/recaptcha/api/siteverify"
   }
+
+
 }
